11 Sprint debt